fix align for .rb files

--- a/app/public/assets/stylesheets/style.css
+++ b/app/public/assets/stylesheets/style.css
@@ -30,6 +30,5 @@
 
 .login-form {
   margin-top: 40%;
-  height: 100px;
 }
 
